# parcel

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  foo.yml  tests.cpp  todos.txt
docs/: build.expr_tree.txt  build.functions.txt  datatypes.txt  functions.txt  intro.txt
docs/dev/: add_new_type.txt  check_mm.txt
include/: callbacks.h  dump.h  parcel.h  tokens.h  tools.h
include/tools/: dump.h  lexer.h  tokenizator.h
src/: builder.cpp  builder.h  core.cpp  fmt.yml  graph_table.cpp  graph_table.h  parcel.cpp  parcel.h  parcelapi.cpp  parcelapi.h  test.cpp
src/builder/: builder.cpp  builder.h  lex_build.cpp  lex_build.h  lextree_build.cpp  lextree_build.h  parse_build.h  parseinstr_build.cpp  parseinstr_build.h  parsetree2_build.h  parsetree_build.cpp  parsetree_build.h
src/data/: fmt.yml  fmt3.yml  t1.txt
src/expr/: expr.cpp  expr.h  expr_tree.h
src/funcs/: fn.h
src/functions/: funcs.h
src/input/: tokenizator.cpp  tokenizator.h
src/lang/: lang.cpp  lang.h
src/lexems/: lexem.h
src/parse/: activates.cpp  activates.h  elements.cpp  elements.h  parser.h  token.cpp  token.h
src/tools/: btree.h  dump.cpp  dump.h  lex.h  log.h  logger.h  offset_table.h  ring.h  tree.h
src/tools/lexer/: lex.h
src/types/: types.cpp  types.h
src2/: builder.cpp  graph_table.h  parcel.h
src2/data/: context.txt  fmt2.yml  fmt3.yml  fmt4_vers2.yml  out_values.txt  src.txt  t1.txt
src2/expr/: expr_tree.h
src2/functions/: funcs.h
tests/: CMakeLists.txt  cl.txt  cl.yml  cl2.cpp  client.cpp  core.cpp  lang.yml  parcel_api.cpp  single_values.cpp  single_values.yml  source.txt
tests/basetypes/: CMakeLists.txt  basetypes.cpp  basetypes.txt
tests/collections/: CMakeLists.txt  collections.cpp  collections.txt  collections.yml
tests/literals/: CMakeLists.txt  literals.cpp  literals.txt  literals.yml  literals2.yml
